Update Firefox extension ID in manifest.json

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -23,7 +23,7 @@
   "homepage_url": "https://wartscan.io/",
   "browser_specific_settings": {
     "gecko": {
-      "id": "shinjirohara2@gmail.com"
+      "id": "contact@warthog.network"
     }
   }
 }
