Add continue-on-error option to CI workflow for extension

--- a/.github/workflows/extension.yml
+++ b/.github/workflows/extension.yml
@@ -33,7 +33,8 @@ jobs:
           xpiFilePath: 'extension.signed.xpi'
           jwtIssuer: ${{ secrets.FF_JWT_ISSUER }}
           jwtSecret: ${{ secrets.FF_JWT_SECRET }}
-     
+        continue-on-error: true
+
       - name: Release
         uses: softprops/action-gh-release@v2
         with:
