Add extension ID to CI workflow for Firefox extension

--- a/.github/workflows/extension.yml
+++ b/.github/workflows/extension.yml
@@ -33,6 +33,7 @@ jobs:
           xpiFilePath: 'extension.signed.xpi'
           jwtIssuer: ${{ secrets.FF_JWT_ISSUER }}
           jwtSecret: ${{ secrets.FF_JWT_SECRET }}
+          extensionId: ${{ secrets.FF_EXTENSION_ID }}
         continue-on-error: true
 
       - name: Release
