--- a/.github/workflows/extension.yml
+++ b/.github/workflows/extension.yml
@@ -30,14 +30,14 @@ jobs:
       - name: Zip Extension
         run: |
           cd build
-          zip -r -FS ../extension.zip * --exclude '*.git*'
+          zip -r -FS ../warthog_addon.zip * --exclude '*.git*'
 
       - name: sign the extension
         uses: cardinalby/webext-buildtools-firefox-sign-xpi-action@v1
         with:
           timeoutMs: 200000
-          zipFilePath: 'extension.zip'
-          xpiFilePath: 'extension.signed.xpi'
+          zipFilePath: 'warthog_addon.zip'
+          xpiFilePath: 'warthog_addon_firefox.xpi'
           jwtIssuer: ${{ secrets.FF_JWT_ISSUER }}
           jwtSecret: ${{ secrets.FF_JWT_SECRET }}
           extensionId: ${{ secrets.FF_EXTENSION_ID }}
@@ -48,6 +48,6 @@ jobs:
         with:
           tag_name : ${{ env.VERSION }}
           files: |
-            extension.zip
-            extension.signed.xpi
+            warthog_addon.zip
+            warthog_addon_firefox.xpi
 
