--- a/.github/workflows/extension.yml
+++ b/.github/workflows/extension.yml
@@ -27,6 +27,10 @@ jobs:
           VERSION=$(grep '"version"' public/manifest.json | sed -E 's/.*"version": "([^"]+)".*/\1/')
           echo "VERSION=$VERSION" >> $GITHUB_ENV
 
+      - name: Zip Extension for Reviewer
+        run: |
+          zip -r -FS warthog_addon_reviewer.zip * --exclude '*.git*'
+
       - name: Zip Extension
         run: |
           cd build
@@ -36,7 +40,7 @@ jobs:
         uses: cardinalby/webext-buildtools-firefox-sign-xpi-action@v1
         with:
           timeoutMs: 2000000
-          zipFilePath: 'warthog_addon.zip'
+          zipFilePath: 'warthog_addon_reviewer.zip'
           xpiFilePath: 'warthog_addon_firefox.xpi'
           jwtIssuer: ${{ secrets.FF_JWT_ISSUER }}
           jwtSecret: ${{ secrets.FF_JWT_SECRET }}
