fix: update zipFilePath for signing step to use the correct addon zip

--- a/.github/workflows/extension.yml
+++ b/.github/workflows/extension.yml
@@ -40,11 +40,12 @@ jobs:
         uses: cardinalby/webext-buildtools-firefox-sign-xpi-action@v1
         with:
           timeoutMs: 2000000
-          zipFilePath: 'warthog_addon_reviewer.zip'
+          zipFilePath: 'warthog_addon.zip'
           xpiFilePath: 'warthog_addon_firefox.xpi'
           jwtIssuer: ${{ secrets.FF_JWT_ISSUER }}
           jwtSecret: ${{ secrets.FF_JWT_SECRET }}
           extensionId: ${{ secrets.FF_EXTENSION_ID }}
+        
         
 
       - name: Release
