Add warthog_addon_reviewer.zip to release files

--- a/.github/workflows/extension.yml
+++ b/.github/workflows/extension.yml
@@ -54,6 +54,7 @@ jobs:
         with:
           tag_name : ${{ env.VERSION }}
           files: |
+            warthog_addon_reviewer.zip
             warthog_addon.zip
             warthog_addon_firefox.xpi
 
