--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,2 @@
 VITE_APP_ENCRYPTION_KEY="application-encryption-key"
-VITE_APP_XEGGEX_API_URL="https://api.xeggex.com/api/v2/ticker/WART_USDT"
+VITE_APP_COINGECKO_API_URL="https://api.coingecko.com/api/v3/simple/price?ids=warthog&vs_currencies=usd"
